tests/ui/traits/non_lifetime_binders/bad-sized-cond.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bad-sized-cond.rs:1:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the size for values of type `V` cannot be known at compilation time
  --> $DIR/bad-sized-cond.rs:11:5
   |
LL |     foo();
   |     ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `V`
note: required by a bound in `foo`
  --> $DIR/bad-sized-cond.rs:6:15
   |
LL | pub fn foo()
   |        --- required by a bound in this
LL | where
LL |     for<V> V: Sized,
   |               ^^^^^ required by this bound in `foo`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
